Database Format Changed to .db

--- a/sql_db.ipynb
+++ b/sql_db.ipynb
@@ -919,7 +919,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The follwing online resource was referred to when creating the SQLite Database:\n",
+    "The following online resource was referred to when creating the SQLite Database:\n",
     "https://www.fullstackpython.com/blog/export-pandas-dataframes-sqlite-sqlalchemy.html"
    ]
   },
@@ -929,8 +929,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the connection engine for the database\n",
-    "engine = create_engine('sqlite:///Picnic_Database.sqlite', echo=True)\n",
+    "# Create the connection engine for the database (.db format chosen)\n",
+    "engine = create_engine('sqlite:///Picnic_Database.db', echo=True)\n",
     "sqlite_connection = engine.connect()"
    ]
   },
@@ -943,11 +943,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-06-15 00:05:16,793 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"Picnic_Data\")\n",
-      "2023-06-15 00:05:16,794 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-15 00:05:16,795 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"Picnic_Data\")\n",
-      "2023-06-15 00:05:16,796 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-15 00:05:16,798 INFO sqlalchemy.engine.Engine \n",
+      "2023-06-15 20:27:09,673 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"Picnic_Data\")\n",
+      "2023-06-15 20:27:09,694 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-15 20:27:09,696 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"Picnic_Data\")\n",
+      "2023-06-15 20:27:09,699 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-15 20:27:09,701 INFO sqlalchemy.engine.Engine \n",
       "CREATE TABLE \"Picnic_Data\" (\n",
       "\t\"Amenity Type\" TEXT, \n",
       "\t\"Suburb Name\" TEXT, \n",
@@ -959,16 +959,22 @@
       ")\n",
       "\n",
       "\n",
-      "2023-06-15 00:05:16,799 INFO sqlalchemy.engine.Engine [no key 0.00119s] ()\n",
-      "2023-06-15 00:05:16,807 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-15 00:05:16,808 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_Picnic_Data_Amenity Type\" ON \"Picnic_Data\" (\"Amenity Type\")\n",
-      "2023-06-15 00:05:16,809 INFO sqlalchemy.engine.Engine [no key 0.00083s] ()\n",
-      "2023-06-15 00:05:16,815 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-15 00:05:16,824 INFO sqlalchemy.engine.Engine INSERT INTO \"Picnic_Data\" (\"Amenity Type\", \"Suburb Name\", \"Reserve Name\", \"Longitude\", \"Latitude\", \"Ward\", \"Google Maps\") VALUES (?, ?, ?, ?, ?, ?, ?)\n",
-      "2023-06-15 00:05:16,825 INFO sqlalchemy.engine.Engine [generated in 0.00414s] ((None, 'CLYDE NORTH', None, 145.36740006125757, -38.09795267857918, 'EDRINGTON', 'https://www.google.com.au/maps/dir//-38.09795267857918,145.36740006125757/@your+location,17z/data=!4m2!4m1!3e0'), (None, 'CLYDE', 'Eliston Reserve', 145.3319956691417, -38.12466756085634, 'BALLA BALLA', 'https://www.google.com.au/maps/dir//-38.12466756085634,145.3319956691417/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'DOVETON', 'BADEN POWELL RESERVE', 145.24726889735484, -37.992108861605686, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.992108861605686,145.24726889735484/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26462188276378, -37.99732886392605, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99732886392605,145.26462188276378/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.2641608834966, -37.99745186390685, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99745186390685,145.2641608834966/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26446288302378, -37.9973048638656, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.9973048638656,145.26446288302378/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'HALLAM', 'HALLAM COMMUNITY CENTRE', 145.2546998948904, -37.99846186256711, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99846186256711,145.2546998948904/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'NARRE WARREN SOUTH', 'HAROLD KEYS DR.RESERVE', 145.29318087483477, -38.02740086278052, 'SPRINGFIELD', 'https://www.google.com.au/maps/dir//-38.02740086278052,145.29318087483477/@your+location,17z/data=!4m2!4m1!3e0')  ... displaying 10 of 661 total bound parameter sets ...  ('Bench Timber Slats on Steel Frame', 'DOVETON', 'EUMEMMERRING CREEK', 145.23753688878062, -37.99843886045886, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99843886045886,145.23753688878062/@your+location,17z/data=!4m2!4m1!3e0'), ('All Timber', 'DOVETON', 'BETULA RESERVE', 145.23114588994852, -37.98833886069982, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.98833886069982,145.23114588994852/@your+location,17z/data=!4m2!4m1!3e0'))\n",
-      "2023-06-15 00:05:16,830 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-15 00:05:16,836 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
-      "2023-06-15 00:05:16,837 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
+      "2023-06-15 20:27:09,702 INFO sqlalchemy.engine.Engine [no key 0.00066s] ()\n",
+      "2023-06-15 20:27:09,712 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-15 20:27:09,713 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_Picnic_Data_Amenity Type\" ON \"Picnic_Data\" (\"Amenity Type\")\n",
+      "2023-06-15 20:27:09,714 INFO sqlalchemy.engine.Engine [no key 0.00097s] ()\n",
+      "2023-06-15 20:27:09,719 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-06-15 20:27:09,727 INFO sqlalchemy.engine.Engine INSERT INTO \"Picnic_Data\" (\"Amenity Type\", \"Suburb Name\", \"Reserve Name\", \"Longitude\", \"Latitude\", \"Ward\", \"Google Maps\") VALUES (?, ?, ?, ?, ?, ?, ?)\n",
+      "2023-06-15 20:27:09,728 INFO sqlalchemy.engine.Engine [generated in 0.00384s] ((None, 'CLYDE NORTH', None, 145.36740006125757, -38.09795267857918, 'EDRINGTON', 'https://www.google.com.au/maps/dir//-38.09795267857918,145.36740006125757/@your+location,17z/data=!4m2!4m1!3e0'), (None, 'CLYDE', 'Eliston Reserve', 145.3319956691417, -38.12466756085634, 'BALLA BALLA', 'https://www.google.com.au/maps/dir//-38.12466756085634,145.3319956691417/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'DOVETON', 'BADEN POWELL RESERVE', 145.24726889735484, -37.992108861605686, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.992108861605686,145.24726889735484/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26462188276378, -37.99732886392605, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99732886392605,145.26462188276378/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.2641608834966, -37.99745186390685, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99745186390685,145.2641608834966/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26446288302378, -37.9973048638656, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.9973048638656,145.26446288302378/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'HALLAM', 'HALLAM COMMUNITY CENTRE', 145.2546998948904, -37.99846186256711, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99846186256711,145.2546998948904/@your+location,17z/data=!4m2!4m1!3e0'), ('Bench Timber Slats on Steel Frame', 'NARRE WARREN SOUTH', 'HAROLD KEYS DR.RESERVE', 145.29318087483477, -38.02740086278052, 'SPRINGFIELD', 'https://www.google.com.au/maps/dir//-38.02740086278052,145.29318087483477/@your+location,17z/data=!4m2!4m1!3e0')  ... displaying 10 of 661 total bound parameter sets ...  ('Bench Timber Slats on Steel Frame', 'DOVETON', 'EUMEMMERRING CREEK', 145.23753688878062, -37.99843886045886, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99843886045886,145.23753688878062/@your+location,17z/data=!4m2!4m1!3e0'), ('All Timber', 'DOVETON', 'BETULA RESERVE', 145.23114588994852, -37.98833886069982, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.98833886069982,145.23114588994852/@your+location,17z/data=!4m2!4m1!3e0'))\n",
+      "2023-06-15 20:27:09,733 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-15 20:27:09,740 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2023-06-15 20:27:09,741 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
      ]
     },
     {
@@ -987,9 +993,7 @@
     "sqlite_table = \"Picnic_Data\"\n",
     "\n",
     "# Move the data into a SQLite database\n",
-    "clean_data_df.to_sql(sqlite_table, sqlite_connection, if_exists=\"replace\")\n",
-    "\n",
-    "# sqlite_table.index()"
+    "clean_data_df.to_sql(sqlite_table, sqlite_connection, if_exists=\"replace\")"
    ]
   },
   {
