More changes to app.py

--- a/sql_db.ipynb
+++ b/sql_db.ipynb
@@ -942,11 +942,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-06-19 21:30:25,101 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"Picnic_Data\")\n",
-      "2023-06-19 21:30:25,102 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-19 21:30:25,104 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"Picnic_Data\")\n",
-      "2023-06-19 21:30:25,107 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-19 21:30:25,111 INFO sqlalchemy.engine.Engine \n",
+      "2023-06-20 18:39:04,038 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"Picnic_Data\")\n",
+      "2023-06-20 18:39:04,040 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-20 18:39:04,041 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"Picnic_Data\")\n",
+      "2023-06-20 18:39:04,042 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-20 18:39:04,044 INFO sqlalchemy.engine.Engine \n",
       "CREATE TABLE \"Picnic_Data\" (\n",
       "\t\"index\" BIGINT, \n",
       "\t\"Amenity Type\" TEXT, \n",
@@ -959,16 +959,16 @@
       ")\n",
       "\n",
       "\n",
-      "2023-06-19 21:30:25,112 INFO sqlalchemy.engine.Engine [no key 0.00107s] ()\n",
-      "2023-06-19 21:30:25,119 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-19 21:30:25,120 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_Picnic_Data_index\" ON \"Picnic_Data\" (\"index\")\n",
-      "2023-06-19 21:30:25,122 INFO sqlalchemy.engine.Engine [no key 0.00114s] ()\n",
-      "2023-06-19 21:30:25,128 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-19 21:30:25,142 INFO sqlalchemy.engine.Engine INSERT INTO \"Picnic_Data\" (\"index\", \"Amenity Type\", \"Suburb Name\", \"Reserve Name\", \"Longitude\", \"Latitude\", \"Ward\", \"Google Maps\") VALUES (?, ?, ?, ?, ?, ?, ?, ?)\n",
-      "2023-06-19 21:30:25,145 INFO sqlalchemy.engine.Engine [generated in 0.00943s] ((0, None, 'CLYDE NORTH', None, 145.36740006125757, -38.09795267857918, 'EDRINGTON', 'https://www.google.com.au/maps/dir//-38.09795267857918,145.36740006125757/@your+location,17z/data=!4m2!4m1!3e0'), (1, None, 'CLYDE', 'Eliston Reserve', 145.3319956691417, -38.12466756085634, 'BALLA BALLA', 'https://www.google.com.au/maps/dir//-38.12466756085634,145.3319956691417/@your+location,17z/data=!4m2!4m1!3e0'), (2, 'Bench Timber Slats on Steel Frame', 'DOVETON', 'BADEN POWELL RESERVE', 145.24726889735484, -37.992108861605686, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.992108861605686,145.24726889735484/@your+location,17z/data=!4m2!4m1!3e0'), (3, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26462188276378, -37.99732886392605, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99732886392605,145.26462188276378/@your+location,17z/data=!4m2!4m1!3e0'), (4, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.2641608834966, -37.99745186390685, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99745186390685,145.2641608834966/@your+location,17z/data=!4m2!4m1!3e0'), (5, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26446288302378, -37.9973048638656, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.9973048638656,145.26446288302378/@your+location,17z/data=!4m2!4m1!3e0'), (6, 'Bench Timber Slats on Steel Frame', 'HALLAM', 'HALLAM COMMUNITY CENTRE', 145.2546998948904, -37.99846186256711, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99846186256711,145.2546998948904/@your+location,17z/data=!4m2!4m1!3e0'), (7, 'Bench Timber Slats on Steel Frame', 'NARRE WARREN SOUTH', 'HAROLD KEYS DR.RESERVE', 145.29318087483477, -38.02740086278052, 'SPRINGFIELD', 'https://www.google.com.au/maps/dir//-38.02740086278052,145.29318087483477/@your+location,17z/data=!4m2!4m1!3e0')  ... displaying 10 of 661 total bound parameter sets ...  (659, 'Bench Timber Slats on Steel Frame', 'DOVETON', 'EUMEMMERRING CREEK', 145.23753688878062, -37.99843886045886, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99843886045886,145.23753688878062/@your+location,17z/data=!4m2!4m1!3e0'), (660, 'All Timber', 'DOVETON', 'BETULA RESERVE', 145.23114588994852, -37.98833886069982, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.98833886069982,145.23114588994852/@your+location,17z/data=!4m2!4m1!3e0'))\n",
-      "2023-06-19 21:30:25,153 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-19 21:30:25,161 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
-      "2023-06-19 21:30:25,163 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
+      "2023-06-20 18:39:04,045 INFO sqlalchemy.engine.Engine [no key 0.00092s] ()\n",
+      "2023-06-20 18:39:04,055 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-20 18:39:04,056 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_Picnic_Data_index\" ON \"Picnic_Data\" (\"index\")\n",
+      "2023-06-20 18:39:04,057 INFO sqlalchemy.engine.Engine [no key 0.00109s] ()\n",
+      "2023-06-20 18:39:04,064 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-20 18:39:04,073 INFO sqlalchemy.engine.Engine INSERT INTO \"Picnic_Data\" (\"index\", \"Amenity Type\", \"Suburb Name\", \"Reserve Name\", \"Longitude\", \"Latitude\", \"Ward\", \"Google Maps\") VALUES (?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2023-06-20 18:39:04,075 INFO sqlalchemy.engine.Engine [generated in 0.00511s] ((0, None, 'CLYDE NORTH', None, 145.36740006125757, -38.09795267857918, 'EDRINGTON', 'https://www.google.com.au/maps/dir//-38.09795267857918,145.36740006125757/@your+location,17z/data=!4m2!4m1!3e0'), (1, None, 'CLYDE', 'Eliston Reserve', 145.3319956691417, -38.12466756085634, 'BALLA BALLA', 'https://www.google.com.au/maps/dir//-38.12466756085634,145.3319956691417/@your+location,17z/data=!4m2!4m1!3e0'), (2, 'Bench Timber Slats on Steel Frame', 'DOVETON', 'BADEN POWELL RESERVE', 145.24726889735484, -37.992108861605686, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.992108861605686,145.24726889735484/@your+location,17z/data=!4m2!4m1!3e0'), (3, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26462188276378, -37.99732886392605, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99732886392605,145.26462188276378/@your+location,17z/data=!4m2!4m1!3e0'), (4, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.2641608834966, -37.99745186390685, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99745186390685,145.2641608834966/@your+location,17z/data=!4m2!4m1!3e0'), (5, 'Bench Recycled Plastic', 'HALLAM', \"GUNN'S ROAD RESERVE\", 145.26446288302378, -37.9973048638656, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.9973048638656,145.26446288302378/@your+location,17z/data=!4m2!4m1!3e0'), (6, 'Bench Timber Slats on Steel Frame', 'HALLAM', 'HALLAM COMMUNITY CENTRE', 145.2546998948904, -37.99846186256711, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99846186256711,145.2546998948904/@your+location,17z/data=!4m2!4m1!3e0'), (7, 'Bench Timber Slats on Steel Frame', 'NARRE WARREN SOUTH', 'HAROLD KEYS DR.RESERVE', 145.29318087483477, -38.02740086278052, 'SPRINGFIELD', 'https://www.google.com.au/maps/dir//-38.02740086278052,145.29318087483477/@your+location,17z/data=!4m2!4m1!3e0')  ... displaying 10 of 661 total bound parameter sets ...  (659, 'Bench Timber Slats on Steel Frame', 'DOVETON', 'EUMEMMERRING CREEK', 145.23753688878062, -37.99843886045886, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.99843886045886,145.23753688878062/@your+location,17z/data=!4m2!4m1!3e0'), (660, 'All Timber', 'DOVETON', 'BETULA RESERVE', 145.23114588994852, -37.98833886069982, 'RIVER GUM', 'https://www.google.com.au/maps/dir//-37.98833886069982,145.23114588994852/@your+location,17z/data=!4m2!4m1!3e0'))\n",
+      "2023-06-20 18:39:04,081 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-20 18:39:04,089 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2023-06-20 18:39:04,090 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
      ]
     },
     {
@@ -1009,15 +1009,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-06-19 21:30:25,219 INFO sqlalchemy.engine.Engine CREATE TABLE Picnic_Spots (id INTEGER PRIMARY KEY, Amenity Type TEXT, Suburb Name TEXT, Reserve Name TEXT, Longitude REAL, Latitude REAL, Ward TEXT, Google Maps TEXT)\n",
-      "2023-06-19 21:30:25,219 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-19 21:30:25,226 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-19 21:30:25,228 INFO sqlalchemy.engine.Engine INSERT INTO Picnic_Spots SELECT * FROM Picnic_Data\n",
-      "2023-06-19 21:30:25,229 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-19 21:30:25,232 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2023-06-19 21:30:25,239 INFO sqlalchemy.engine.Engine DROP TABLE Picnic_Data\n",
-      "2023-06-19 21:30:25,240 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-06-19 21:30:25,248 INFO sqlalchemy.engine.Engine COMMIT\n"
+      "2023-06-20 18:39:04,145 INFO sqlalchemy.engine.Engine CREATE TABLE Picnic_Spots (id INTEGER PRIMARY KEY, Amenity Type TEXT, Suburb Name TEXT, Reserve Name TEXT, Longitude REAL, Latitude REAL, Ward TEXT, Google TEXT)\n",
+      "2023-06-20 18:39:04,145 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-20 18:39:04,152 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-20 18:39:04,153 INFO sqlalchemy.engine.Engine INSERT INTO Picnic_Spots SELECT * FROM Picnic_Data\n",
+      "2023-06-20 18:39:04,154 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-20 18:39:04,156 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2023-06-20 18:39:04,162 INFO sqlalchemy.engine.Engine DROP TABLE Picnic_Data\n",
+      "2023-06-20 18:39:04,163 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-06-20 18:39:04,169 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
@@ -1031,7 +1031,7 @@
     "\n",
     "# sqlite_connection.execute(\"ALTER TABLE Picnic_Data ADD PRIMARY KEY (index)\")\n",
     "\n",
-    "sqlite_connection.execute(\"CREATE TABLE Picnic_Spots (id INTEGER PRIMARY KEY, Amenity Type TEXT, Suburb Name TEXT, Reserve Name TEXT, Longitude REAL, Latitude REAL, Ward TEXT, Google Maps TEXT)\")\n",
+    "sqlite_connection.execute(\"CREATE TABLE Picnic_Spots (id INTEGER PRIMARY KEY, Amenity Type TEXT, Suburb Name TEXT, Reserve Name TEXT, Longitude REAL, Latitude REAL, Ward TEXT, Google TEXT)\")\n",
     "\n",
     "sqlite_connection.execute(\"INSERT INTO Picnic_Spots SELECT * FROM Picnic_Data\")\n",
     "\n",
